Added form structure for project

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
 		<title>Mini Project</title>
 	</head>
 	<body>
+		<ul id="todolist"></ul>
+
+		<form id="todoform" action="">
+			<input id="todoinput" type="text" placeholder="Enter a todo" />
+			<button type="submit" id="btn">Click Me</button>
+		</form>
 		<script src="dist/index.js"></script>
 	</body>
 </html>
